--- a/.htaccess
+++ b/.htaccess
@@ -1,17 +1,14 @@
+RewriteEngine On
+RewriteBase /
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !.*\.(ico|gif|jpg|jpeg|png|js|css)
+RewriteRule ^([^?]*) index.php?route=$1 [L,QSA]
+RewriteCond %{QUERY_STRING} ^route=index$
+
 AddDefaultCharset UTF-8
 ErrorDocument 404 /
 php_value date.timezone "Europe/Moscow"
 
-php_flag always_populate_raw_post_data Off
-php_flag display_startup_errors on
 php_flag display_errors on
-php_flag html_errors on
-php_flag log_errors on
-php_flag ignore_repeated_errors off
-php_flag ignore_repeated_source off
-php_flag report_memleaks on
-php_flag track_errors on
-php_value docref_root 0
-php_value docref_ext 0
 php_value error_reporting -1
-php_value log_errors_max_len 0
