--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,8 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !.*\.(ico|gif|jpg|jpeg|png|js|css)
 RewriteRule ^([^?]*) index.php?route=$1 [L,QSA]
 RewriteCond %{QUERY_STRING} ^route=index$
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 AddDefaultCharset UTF-8
 ErrorDocument 404 /
