--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,11 @@
+#First rewrite any request to the wrong domain to use the correct one (here www.)
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteRule ^(.*)$ https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+#Now, rewrite to HTTPS:
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 AddDefaultCharset UTF-8
 ErrorDocument 404 /wrong_page.php
 php_value date.timezone "Europe/Moscow"
