--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
 RewriteCond %{HTTPS} !=on
-RewriteRule ^.*$ http://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
 
 AddDefaultCharset UTF-8
 ErrorDocument 404 /wrong_page.php
