--- a/console/folder/enviroment/prod/.htaccess
+++ b/console/folder/enviroment/prod/.htaccess
@@ -15,15 +15,14 @@ AddDefaultCharset UTF-8
 ErrorDocument 404 /wrong_page.php
 php_value date.timezone "Europe/Moscow"
 
-php_flag always_populate_raw_post_data Off
-php_flag display_startup_errors on
-php_flag display_errors on
-php_flag html_errors on
+php_flag display_startup_errors off
+php_flag display_errors off
+php_flag html_errors off
 php_flag log_errors on
 php_flag ignore_repeated_errors off
 php_flag ignore_repeated_source off
 php_flag report_memleaks on
-php_flag track_errors on
+php_flag track_errors off
 php_value docref_root 0
 php_value docref_ext 0
 php_value error_reporting -1
