--- a/console/folder/environment/dev/.htaccess
+++ b/console/folder/environment/dev/.htaccess
@@ -19,4 +19,5 @@ php_flag track_errors on
 php_value docref_root 0
 php_value docref_ext 0
 php_value error_reporting -1
-php_value log_errors_max_len 0
+php_value error_log ./error.log
+php_value log_errors_max_len 1024
