--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "php": ">=5.6.0",
     "codemix/yii2-localeurls": "*",
+    "php": ">=5.6.0",
+    "phpnt/yii2-metismenu": "*",
+    "rmrevin/yii2-fontawesome": "~2.17",
     "yiisoft/yii2": "~2.0.6",
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
