--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
   "minimum-stability": "stable",
   "require": {
     "codemix/yii2-localeurls": "*",
+    "miloschuman/yii2-highcharts-widget": "*",
     "php": ">=5.6.0",
     "phpnt/yii2-metismenu": "*",
     "rmrevin/yii2-fontawesome": "~2.17",
