--- a/frontend/web/.htaccess
+++ b/frontend/web/.htaccess
@@ -4,5 +4,5 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# в противном случае перенаправляем на team.php
+# в противном случае перенаправляем на index.php
 RewriteRule . index.php
