--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     "rmrevin/yii2-fontawesome": "~2.17",
     "yiisoft/yii2": "~2.0.6",
     "yiisoft/yii2-bootstrap": "~2.0.0",
-    "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-    "jessedp/php-timezones": "^0.1.1"
+    "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
   },
   "require-dev": {
     "codeception/base": "^2.2.3",
