--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
   "require": {
     "codemix/yii2-localeurls": "*",
     "ext-intl": "*",
+    "ext-gd": "*",
     "miloschuman/yii2-highcharts-widget": "*",
     "php": ">=5.6.0",
     "phpnt/yii2-metismenu": "*",
