--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "rmrevin/yii2-fontawesome": "~2.17",
     "yiisoft/yii2": "~2.0.6",
     "yiisoft/yii2-bootstrap": "~2.0.0",
-    "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+    "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
+    "coderlex/yii2-wysibb": "*"
   },
   "require-dev": {
     "codeception/base": "^2.2.3",
