--- a/.htaccess
+++ b/.htaccess
@@ -4,13 +4,13 @@
 </IfModule>
 
 <IfModule mod_rewrite.c>
-    # если /admin, то в backend
-    RewriteCond %{REQUEST_URI} ^/(admin)
-    RewriteRule ^admin/assets/(.*)$ backend/web/assets/$1 [L]
-    RewriteRule ^admin/css/(.*)$ backend/web/css/$1 [L]
-    RewriteRule ^admin/js/(.*)$ backend/web/js/$1 [L]
+    # если /qTwnVrXEBN, то в backend
+    RewriteCond %{REQUEST_URI} ^/(qTwnVrXEBN)
+    RewriteRule ^qTwnVrXEBN/assets/(.*)$ backend/web/assets/$1 [L]
+    RewriteRule ^qTwnVrXEBN/css/(.*)$ backend/web/css/$1 [L]
+    RewriteRule ^qTwnVrXEBN/js/(.*)$ backend/web/js/$1 [L]
     RewriteCond %{REQUEST_URI} !^/backend/web/(assets|js|css|js)/
-    RewriteCond %{REQUEST_URI} ^/(admin)
+    RewriteCond %{REQUEST_URI} ^/(qTwnVrXEBN)
     RewriteRule ^.*$ backend/web/index.php [L]
     RewriteCond %{REQUEST_URI} ^/(assets|css|js|images)
     RewriteRule ^assets/(.*)$ frontend/web/assets/$1 [L]
