--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "yiisoft/yii2": "~2.0.6",
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-    "coderlex/yii2-wysibb": "*"
+    "coderlex/yii2-wysibb": "*",
+    "zhuravljov/yii2-logreader": "*"
   },
   "require-dev": {
     "codeception/base": "^2.2.3",
